--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -15,16 +15,10 @@
 		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 	<script 
 		src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
-    <script 
-    	src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-    <script 
-   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-   	<script
-   		src="/js/socket.js"></script>
 </head>
-    	
 
 <body>
+
     <div class="row">
         <div class="col-md-12">
             <table id="conversation" class="table table-striped">
@@ -62,10 +56,12 @@
                     </ul>
 
                     <th:block sec:authorize="hasRole('ADMIN')">			
-						<h3><span sec:authentication="principal.adminName" id="userName" th:value="principal.adminName"></span></h3>
+						<h3><span sec:authentication="principal.adminName" id="userName" th:value="${#authentication.name}"></span></h3>
+						<input hidden type="text" th:value="${#authentication.name}" id="client">
 					</th:block>
                     <th:block sec:authorize="hasRole('EMPLOYEE')">			
-						<h3><span sec:authentication="principal.employeeName" id="userName" th:value="principal.employeeName"></span></h3>
+						<h3><span sec:authentication="principal.employeeName" id="userName" th:value="${#authentication.name}"></span></h3>
+						<input hidden type="text" th:value="${#authentication.name}" id="client">
 					</th:block>
 
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0">
@@ -184,4 +180,10 @@
     </header>
     
 </body>
+    <script 
+    	src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script 
+   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   	<script
+   		src="/js/socket.js"></script>
 </html>
