--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
@@ -13,9 +13,10 @@
 	<script 
 		src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
 	      
-</head>
+</head> 
 <body>
-	<input hidden type="text" th:value="${userId}" class="employeeName" id="employeeName">
+	<input hidden type="text" th:value="${userId}" id="employeeName">
+	<input hidden type="text" th:value="${adminId}" id="client">
 	
 	<form hidden id="sendForm">
     	<div>
@@ -57,17 +58,6 @@
 	    <input type="button" value="등록" id="submit" class="submittbtn">
 	</th:block>
 
-
-	<th:block sec:authorize="hasRole('ADMIN')">			
-		<h3><span hidden sec:authentication="principal.adminId" id="userId" th:value="principal.adminId"></span></h3>
-	</th:block>
-
-	<th:block sec:authorize="hasRole('EMPLOYEE')">			
-		<h3><span hidden sec:authentication="principal.employeeId" id="userId" th:value="principal.employeeId"></span></h3>
-	</th:block>
-
-	<input hidden type="text" th:value="${employeeName}" class="employeeName" id="employeeName">
-	
 	<form hidden id="sendForm">
 	    <div>
 	        <input type="text" id="sendingMessage">
