--- a/com-project-clean/src/main/resources/templates/admin/adminAside.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminAside.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="https://www.thymeleaf.org"
+	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -72,22 +73,28 @@ body {
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-        <a href="#">전체 인원 조회</a>
-        <a href="/admin/hrCard/adminList">관리자 조회</a>
-        <a href="/admin/hrCard/adminRegist">관리자 등록</a>
-        <a href="#">직원 등록</a>
-        <a href="#">블랙리스트 조회</a>
+        <a style="font-size : 16px" href="#">전체 인원 조회</a>
+        <a style="font-size : 16px" href="/admin/hrCard/hr/adminList">관리자 조회</a>
+        <th:block sec:authorize="hasRole('ADMIN')">	
+        <a style="font-size : 16px" href="/admin/hrCard/hr/adminRegist">관리자 등록</a>
+        </th:block>
+        <a style="font-size : 16px" href="#">직원 등록</a>
+        <a style="font-size : 16px" href="#">블랙리스트 조회</a>
       </div>
     <br>
     <button class="dropdown-btn">휴가관리 
         <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-container">
-        <a href="/admin/vacation/registVacation">휴가 신청</a>
-        <a href="#">나의 휴가 조회</a>
-        <a href="#">휴가 전체 조회</a>
-        <a href="/admin/vacation/standbyFirstVacationList">1 승인 대기 목록</a>
-        <a href="/admin/vacation/standbySecondVacationList">1 승인 대기 목록</a>
+        <a style="font-size : 16px" href="/admin/hrCard/registVacation">휴가 신청</a>
+        <a style="font-size : 16px" href="#">나의 휴가 조회</a>
+        <a style="font-size : 16px" href="#">휴가 전체 조회</a>
+        <th:block sec:authorize="hasRole('ADMIN')">	
+        <a style="font-size : 16px" href="/admin/hrCard/vacation/standbyFirstVacationList">1차 승인 대기 목록</a>
+        </th:block>
+       <!--  <th:block sec:authorize="hasRole('BOSS')"> -->	
+        <a style="font-size : 16px" href="/admin/hrCard/boss/standbySecondVacationList">2차 승인 대기 목록</a>
+    	<!-- </th:block> -->
     </div>
 </div>
 
