--- a/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/vacationListPaging.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/vacationListPaging.html
@@ -4,7 +4,10 @@
 <meta charset="UTF-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <title>Insert title here</title>
+<style>
+</style>
 </head>
+
 <body>
 	<div class="pagingArea" align="center">
 	<!-- 맨 앞으로 이동 버튼 -->
@@ -44,7 +47,7 @@
 	</div>
 
 	<script>
-		const link = "/admin/vacation/standbySecondVacationList";
+		const link = "/admin/hrCard/vacation/standbyFirstVacationList";
 		let searchText = "";
 		let searchConditionExist = "[[${ selectCriteria.searchCondition }]]";
 		let searchValueExist = "[[${ selectCriteria.searchValue }]]";
