--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<button onclick="location.href='location.href='/admin/select/retireN">직원</button>
-	<button onclick="location.href='location.href='/admin/select/retireN">관리자</button>
+	<button onclick="location.href='location.href='/admin/hrCard/adminList">관리자</button>
 </body>
 </html>
