--- a/com-project-clean/src/main/resources/templates/admin/hrCard/boss/vacationSecondListPaging.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/boss/vacationSecondListPaging.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <title>Insert title here</title>
+<style>
+	.pagingArea{
+		margin : auto;
+		display : block;
+	}
+</style>
+
 </head>
 <body>
 	<div class="pagingArea" align="center">
@@ -44,7 +51,7 @@
 	</div>
 
 	<script>
-		const link = "/admin/hrCard/adminList";
+		const link = "/admin/hrCard/boss/standbySecondVacationList";
 		let searchText = "";
 		let searchConditionExist = "[[${ selectCriteria.searchCondition }]]";
 		let searchValueExist = "[[${ selectCriteria.searchValue }]]";
