--- a/com-project-clean/src/main/resources/templates/admin/hrCard/hr/adminList.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/hr/adminList.html
@@ -51,15 +51,23 @@
             display: inherit;
         }
     </style>
+    
+  
+    
 </head>
 <body>
+	<div th:replace="/common/Header.html"></div>
+	<div th:include="admin/adminAside.html"></div>
+	
 	<div class="container">
+	
+	
 
        <div class="search-area" align="center">
-		<form id="searchForm" action="/admin/hrCard/adminList" method="get" style="display: inline-block">
+		<form id="searchForm" action="/admin/hrCard/hr/adminList" method="get" style="display: inline-block">
 				<select id="searchCondition" th:with="searchCondition = ${selectCriteria.searchCondition}"
 					 name="searchCondition">
-					<option value="adminName" th:selected="${ searchCondition } == 'adminName'">신청자명</option>
+					<option value="adminName" th:selected="${ searchCondition } == 'adminName'">이름</option>
 					<option value="adminBirth" th:selected="${ searchCondition } == 'adminBirth'">생년월일</option>
 					<option value="adminHireDate" th:selected="${ searchCondition } == 'adminHireDate'">입사일</option>
 					<option value="adminJob" th:selected="${ searchCondition } == 'adminJob'">직책</option>
@@ -75,7 +83,7 @@
 		</form>
                  
          
-                <a href="/admin/hrCard/retireAdminList">퇴사자 목록</a>
+                <a href="/admin/hrCard/hr/retireAdminList">퇴사자 목록</a>
 
     
                 <table id="adminList" border="1">
@@ -104,7 +112,7 @@
        </div>
        
      <input type="hidden" name="currentPage" value="1">
-	<div th:replace="admin/hrCard/adminListPaging.html"></div>
+	<div th:replace="admin/hrCard/hr/adminListPaging.html"></div>
        
     <script>
         
