--- a/com-project-clean/src/main/resources/templates/admin/hrCard/hr/retireAdminList.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/hr/retireAdminList.html
@@ -55,12 +55,14 @@
 <body>
 	<div class="container">
 
+	<div th:replace="/common/Header.html"></div>
+	<div th:include="admin/adminAside.html"></div>
        
       <div class="search-area" align="center">
-		<form id="searchForm" action="/admin/hrCard/retireAdminList" method="get" style="display: inline-block">
+		<form id="searchForm" action="/admin/hrCard/hr/retireAdminList" method="get" style="display: inline-block">
 				<select id="searchCondition" th:with="searchCondition = ${selectCriteria.searchCondition}"
 					 name="searchCondition">
-					<option value="adminName" th:selected="${ searchCondition } == 'adminName'">신청자명</option>
+					<option value="adminName" th:selected="${ searchCondition } == 'adminName'">이름</option>
 					<option value="adminBirth" th:selected="${ searchCondition } == 'adminBirth'">생년월일</option>
 					<option value="adminRetireDate" th:selected="${ searchCondition } == 'adminRetireDate'">퇴사일</option>
 					<option value="adminJob" th:selected="${ searchCondition } == 'adminJob'">직책</option>
@@ -104,7 +106,7 @@
             </div>
        </div> 
      <input type="hidden" name="currentPage" value="1">
-	<div th:replace="admin/hrCard/retireAdminListpaging.html"></div>
+	<div th:replace="admin/hrCard/hr/retireAdminListpaging.html"></div>
      
        
     <script>
@@ -123,7 +125,7 @@
                 }
 
             	employee[i].onclick = function(){
-                    location.href="/admin/hrCard/adminDetail/" + this.parentNode.children[0].innerText;
+                    location.href="/admin/hrCard/hr/retireAdminDetail/" + this.parentNode.children[0].innerText;
                 }
             }
         };
