--- a/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyFirstVacationList.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/vacation/standbyFirstVacationList.html
@@ -50,17 +50,20 @@
         .tab-content.current {
             display: inherit;
         }
+        
     </style>
 </head>
 <body>
-
-	
+	<div th:replace="/common/Header.html"></div>
+	<div th:include="admin/adminAside.html"></div>
 	
 	 <div class="container">
-	 <div class="search-area" align="center">
-		<form id="searchForm" action="/admin/vacation/standbySecondVacationList" method="get" style="display: inline-block">
-				<select th:with="searchCondition = ${selectCriteria.searchCondition}"
-					id="searchCondition" name="searchCondition">
+
+        
+        <div class="search-area" align="center">
+		<form id="searchForm" action="/admin/hrCard/vacation/standbyFirstVacationList" method="get" style="display: inline-block">
+				<select id="searchCondition" th:with="searchCondition = ${selectCriteria.searchCondition}"
+					 name="searchCondition">
 					<option value="requestAdmin" th:selected="${ searchCondition } == 'requestAdmin'">신청자</option>
 					<option value="vacationName" th:selected="${ searchCondition } == 'vacationName'">휴가구분</option>
 					<option value="vacationStartDate" th:selected="${ searchCondition } == 'vacationStartDate'">휴가 시작일</option>
@@ -71,13 +74,13 @@
 			<input type="date" id="vacationStartDate" name="searchValue" style="display: none">
 			<input type="date" id="vacationEndDate" name="searchValue" style="display: none">
 			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
-		
-			<button type="submit">검색하기</button>
+			
+			<button class="btn btn-bs" type="submit">검색하기</button>
 		</form>
 
-  
+		
 
-            <table id="vacationList" border="1">
+            <table id="vacationList" border="1" width="1000px">
                 <thead>
                     <tr>
                         <th>신청번호</th>
@@ -85,24 +88,26 @@
                         <th>휴가시작일</th>
                         <th>휴가종료일</th>
                         <th>휴가구분</th>
-                        <th>2차 승인 여부</th>
+                        <th>1차 승인 여부</th>
+                 		
                     </tr>
                 </thead>
                 <tbody>
-                   <tr th:each="index : ${ vacationList }">
+                   	<tr th:each="index : ${ vacationList }">
 						<td th:text="${ index.vacationNo }"></td>
 						<td th:text="${ index.requestAdmin }"></td>
 						<td th:text="${ index.vacationStartDate }"></td>
 						<td th:text="${ index.vacationEndDate }"></td>
 						<td th:text="${ index.vacationName }"></td>
-						<td th:text="${ index.vacationSecondConfirmYn }"></td>
+						<td th:text="${ index.vacationFirstConfirmYn }"></td>
 					</tr>
                 </tbody>
             </table>
         </div>
 	</div>
+	
 	<input type="hidden" name="currentPage" value="1">
-	<div th:replace="admin/vacation/vacationSecondListpaging.html"></div>
+	<div th:replace="admin/hrCard/vacation/vacationListpaging.html"></div>
 	<script>
 	 /* hover event */
 	    function hover(){
@@ -118,15 +123,22 @@
 	            }
 	
 	        	employee[i].onclick = function(){
-	                location.href="/admin/vacation/standbySecondVacationDetail/" + this.parentNode.children[0].innerText;
+	                location.href="/admin/hrCard/vacation/standbyVacationDetail/" + this.parentNode.children[0].innerText;
 	            }
 	        }
 	    };
+	    
+	    
 	    
 	    /* 시작 할 때 hover event */
         $(function(){
         	hover();
         })
+
+	
+	</script>
+	
+	<script>
 			
 			$("#searchCondition").change(function(){        
 			  var result = $("#searchCondition option:selected").val();
@@ -148,8 +160,8 @@
 			  }
 			})
 			
+		</script>
 	
-	</script>
 
 </body>
 </html>
