--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
@@ -42,6 +42,7 @@
     <div>
         <input type="text" id="sendingMessage">
         <input type="text" id="sendingName" >
+        <input type="text" id="path" >
     </div>
     <button id="send" type="submit">Send</button>
 </form>
@@ -74,7 +75,7 @@
 	    	document.getElementById("denial").onclick = function(){
 	    		
 				if(confirm("해당 직원에게 블랙리스트 경고 횟수를 추가하시겠습니까? 직원에게 알림이 전송됩니다.")){
-	    			
+					$("#path").val("/employee/checkList/black/select")
 	    			$("#sendingMessage").val("체크리스트가 재반려되었습니다. 블랙리스트 경고 횟수가 증가합니다.")
 	    			
 		    		$("#sendingName").val(userName)
@@ -109,7 +110,8 @@
 	    	
 	    	document.getElementById("accept").onclick = function(){
 	    		if(confirm("서류를 승인하시겠습니까? 직원에게 알람이 전송됩니다.")){
-	
+	    			
+	    			$("#path").val("/employee/checkList/accept/select")
 	    			$("#sendingMessage").val("체크리스트가 승인되었습니다. 급여 확인 부탁드립니다.")
 	    			$("#sendingName").val(userName)
 	    			
