--- a/com-project-clean/src/main/resources/templates/common/checkListAside.html
+++ b/com-project-clean/src/main/resources/templates/common/checkListAside.html
@@ -2,39 +2,118 @@
 <html xmlns:th="https://www.thymeleaf.org"
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Document</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body {
+  font-family: "Lato", sans-serif;
+}
 
+section{
+  width:65%;
+  margin-top:1%;
+}
+/* Fixed sidenav, full height */
+.sidenav {
+  float: left;
+  height: 800px;
+  width: 200px;
+  z-index: 1;
+/*   overflow-x: hidden; */
+  padding-top: 20px;
+  background-color: #ffffff;
+}
+
+/* Style the sidenav links and the dropdown button */
+.sidenav a, .dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 19px;
+  color: #575757;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+
+/* On mouse-over */
+.sidenav a:hover, .dropdown-btn:hover {
+  -webkit-text-stroke: 1px;
+  color:#7DBEED;
+}
+
+/* Add an active class to the active dropdown button */
+.active {
+    background-color : #f1f1f1;
+    -webkit-text-stroke: 1px;
+}
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+/*   display: none; */
+  background-color: #ffffff;
+  padding-left: 8px;
+}
+
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+
+.dropdown-btn {
+  font-weight: bold;
+}
+
+</style>
 </head>
 <body>
-    <aside>
-        <nav class="AsideVar">
-            
-            <button class="btn btn-c btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" 
-                    data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="false">
-            체크리스트 관리
-            </button>
-            <div class="collapse" id="home-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                	<th:block sec:authorize="hasRole('ADMIN')">
-                    	<li><a class="dropdown-item" href="/admin/checklist/select">미처리 체크리스트 조회</a></li>
-                     	<li><a class="dropdown-item" href="/admin/checklist/denial/select">반려 체크리스트 검토</a></li>
-                     	<li><a class="dropdown-item" href="/admin/checklist/accept/select">완료 체크리스트 조회</a></li>
-                     	<li><a class="dropdown-item" href="/admin/checklist/black/select">경고 체크리스트 조회</a></li>
-                     </th:block>
-                     <th:block sec:authorize="hasRole('EMPLOYEE')">
-                     	<li><a class="dropdown-item" href="/employee/checkList/selectMyCheckList">신청 업무 조회</a></li>
-                        <li><a class="dropdown-item" href="/employee/checkList/insert">체크리스트 작성</a></li>
-                        <li><a class="dropdown-item" href="/employee/checkList/denial/select">보류 체크리스트 조회</a></li>
-                        <li><a class="dropdown-item" href="/employee/checkList/accept/select">완료 체크리스트 조회</a></li>
-                        <li><a class="dropdown-item" href="/employee/checkList/black/select">경고 체크리스트 조회</a></li>
-                     </th:block>
-                  </ul>
-            </div>
-            
-        </nav>
-    </aside>
+
+<div class="sidenav">
+	<button class="dropdown-btn">급여관리
+		<i class="fa fa-caret-down"></i>
+	</button>
+	
+	<div class="dropdown-container">
+		<th:block sec:authorize="hasRole('ADMIN')">
+        	<a class="dropdown-item" href="/admin/checklist/select">미처리 체크리스트 조회</a>
+            <a class="dropdown-item" href="/admin/checklist/denial/select">반려 체크리스트 검토</a>
+            <a class="dropdown-item" href="/admin/checklist/accept/select">완료 체크리스트 조회</a>
+            <a class="dropdown-item" href="/admin/checklist/black/select">경고 체크리스트 조회</a>
+		</th:block>
+        
+		<th:block sec:authorize="hasRole('EMPLOYEE')">
+        	<a class="dropdown-item" href="/employee/checkList/selectMyCheckList">신청 업무 조회</a>
+            <a class="dropdown-item" href="/employee/checkList/insert">체크리스트 작성</a>
+            <a class="dropdown-item" href="/employee/checkList/denial/select">보류 체크리스트 조회</a>
+            <a class="dropdown-item" href="/employee/checkList/accept/select">완료 체크리스트 조회</a>
+			<a class="dropdown-item" href="/employee/checkList/black/select">경고 체크리스트 조회</a>
+		</th:block>
+	</div>
+      
+</div>
+
+
+<script>
+/* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+var dropdown = document.getElementsByClassName("dropdown-btn");
+var i;
+
+for (i = 0; i < dropdown.length; i++) {
+  dropdown[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var dropdownContent = this.nextElementSibling;
+    if (dropdownContent.style.display === "block") {
+      dropdownContent.style.display = "none";
+    } else {
+      dropdownContent.style.display = "block";
+    }
+  });
+}
+</script>
+
 </body>
-</html>
+</html> 
