--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckList.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckList.html
@@ -30,6 +30,24 @@
 		}
 	</script>	
 	
+	<!-- <div class="search" style="margin-left: 35%;">
+		<form name="denialCheckBoxForm" id="denialSearch">
+			<span>체크리스트 조회</span>
+			
+				<select name="denialCheckList" id="checkList">
+					<option value="all" selected>전체</option>
+					<option value="employee">재직자</option>
+					<option value="customer">고객</option>
+				</select>
+				
+				<input type="text" name="categoryValue" id="categoryValue" placeholder="재직자 검색">
+				<input type="text" style="display: none;">
+				
+				<button type="button" id="search" onclick="searchFunction();">검색</button>
+				<input type="hidden" value="0" name="page">
+		</form>
+	</div>
+	 -->
 	<input type="hidden" value="0" name=page>
 	
 	<table id="taskInfo">
@@ -69,6 +87,11 @@
 		
 	}
 	
+	function searchFunction(){
+		var queryString = $("form[name=denialCheckBoxForm]").serialize();
+		checkListFunction(queryString);
+	} 
+	
 	function checkListFunction(queryString){
 		$.ajax({
 			url : "select",
@@ -84,6 +107,7 @@
 				
 				category=data.category;
 				categoryValue=data.categoryValue;
+				
 				for(var index in data.checkList){
 					
 					$tr = $("<tr>");
@@ -177,13 +201,21 @@
 	         	});
 			};
 	      
-	      	function mainCheckList(){
-	    	  
-	    		var queryString = $("form[name=mainPage]").serialize();
-	    	  	checkListFunction
-	    	  	
-	      	};
 	      
+			$("#denialCheckList").change(function(){
+				$("denialCheckList option:selected").each(function(){
+					
+					$("#categoryValue").val('');
+					denailCheckList();
+					
+				});
+			});
+			
+			function denailCheckList(){
+				
+				var queryString = $("form[name=mainPage]").serialize();
+				checkListFunction(queryString);
+			}
 </script>
 </body>
 </html>
