--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectStandCheckListDetails.html
@@ -162,7 +162,7 @@
 	    				
 	    				success: function(data){
 	    					
-			    			alert("전송 완료. 직원에게 알림이 전송됩니다.");
+			    			alert("전송 완료. 해당 직원에게 알림이 전송되었습니다.");
 	    					location.href="/admin/checklist/accept/select"
 							
 	    				},
